# stm32f411-test-rs

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
