[package]
name = "stm32f411-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f411ce",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
    "exti",
    "chrono",
] }
embassy-executor = { version = "0.5.0", features = [
    "task-arena-size-32768",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
# embassy-usb = { version = "0.1.0", path = "../../embassy-usb", features = ["defmt" ] }
# embassy-sync = { version = "0.5.0", path = "../../embassy-sync", features = ["defmt"] }

defmt = "0.3.5"
defmt-rtt = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-probe = "0.3.1"
heapless = { version = "0.8", default-features = false }
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }

[profile.release]
debug = 2
